--- a/Debugger/Base.lproj/Main.storyboard
+++ b/Debugger/Base.lproj/Main.storyboard
@@ -123,8 +123,8 @@
                                     </navigationItem>
                                 </items>
                             </navigationBar>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="jF1-Hv-ZEw">
-                                <rect key="frame" x="20" y="76" width="374" height="500"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="jF1-Hv-ZEw">
+                                <rect key="frame" x="20" y="76" width="374" height="560"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Debugger is a simple bug squashing game. You can play default levels or create your own levels." textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4To-cv-rzF">
                                         <rect key="frame" x="0.0" y="0.0" width="368" height="41"/>
@@ -133,52 +133,71 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Credits:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MVU-3u-kDD">
-                                        <rect key="frame" x="0.0" y="61" width="60" height="20.5"/>
+                                        <rect key="frame" x="0.0" y="49" width="60" height="20.5"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Bug image by OpenClipart-Vectors from Pixabay" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WcU-Vw-Sps">
-                                        <rect key="frame" x="0.0" y="101.5" width="370" height="20.5"/>
+                                        <rect key="frame" x="0.0" y="77.5" width="370" height="20.5"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Bug" translatesAutoresizingMaskIntoConstraints="NO" id="hCz-fu-bYy">
-                                        <rect key="frame" x="0.0" y="142" width="50" height="50"/>
+                                        <rect key="frame" x="0.0" y="106" width="50" height="50"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="50" id="G0I-2u-cgk"/>
                                             <constraint firstAttribute="height" constant="50" id="MP4-K9-8Zw"/>
                                         </constraints>
                                     </imageView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Debugging image downloaded at https://dlpng.com/png/6911668" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ezs-AD-r7Q">
-                                        <rect key="frame" x="0.0" y="212" width="312" height="41"/>
+                                        <rect key="frame" x="0.0" y="164" width="312" height="41"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Debugging" translatesAutoresizingMaskIntoConstraints="NO" id="lbo-F1-1S6">
-                                        <rect key="frame" x="0.0" y="273" width="50" height="35"/>
+                                        <rect key="frame" x="0.0" y="213" width="50" height="35"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="35" id="MAX-kO-UZ9"/>
                                             <constraint firstAttribute="width" constant="50" id="sgJ-cL-e3u"/>
                                         </constraints>
                                     </imageView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Bug Squashed Image by Clker-Free-Vector-Images from Pixabay" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="anp-dP-gav">
-                                        <rect key="frame" x="0.0" y="328" width="334.5" height="41"/>
+                                        <rect key="frame" x="0.0" y="256" width="334.5" height="41"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="BugSquashed" translatesAutoresizingMaskIntoConstraints="NO" id="W9e-5T-LwN">
-                                        <rect key="frame" x="0.0" y="389" width="50" height="50"/>
+                                        <rect key="frame" x="0.0" y="305" width="50" height="50"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="50" id="UbT-tf-Ecq"/>
                                             <constraint firstAttribute="width" constant="50" id="bzt-4J-ftf"/>
                                         </constraints>
                                     </imageView>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Default Level Background Image by Mirka777 from Pixabay" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="v91-Ud-foB">
+                                        <rect key="frame" x="0.0" y="363" width="349" height="41"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="DefaultLevelBackground" translatesAutoresizingMaskIntoConstraints="NO" id="gKQ-I8-wb0">
+                                        <rect key="frame" x="0.0" y="412" width="75" height="50"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="75" id="fwn-kF-qTi"/>
+                                            <constraint firstAttribute="height" constant="50" id="gps-bb-gtb"/>
+                                        </constraints>
+                                    </imageView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Sound effects obtained from https://www.zapsplat.com" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ocN-zB-1kt">
-                                        <rect key="frame" x="0.0" y="459" width="278" height="41"/>
+                                        <rect key="frame" x="0.0" y="470" width="278" height="41"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Image Picker in Level Maker obtains images from Pixabay API" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Cdk-Xx-fyR">
+                                        <rect key="frame" x="0.0" y="519" width="374" height="41"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
@@ -734,5 +753,6 @@
         <image name="Bug" width="100" height="100"/>
         <image name="BugSquashed" width="100" height="100"/>
         <image name="Debugging" width="150" height="136"/>
+        <image name="DefaultLevelBackground" width="1000" height="666.5"/>
     </resources>
 </document>
