--- a/Debugger/Base.lproj/Main.storyboard
+++ b/Debugger/Base.lproj/Main.storyboard
@@ -707,9 +707,6 @@
                                         </label>
                                     </subviews>
                                 </tableViewCellContentView>
-                                <connections>
-                                    <segue destination="9pw-pH-6Cb" kind="show" id="AXH-O4-Bi0"/>
-                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
@@ -726,7 +723,7 @@
         <!--Player View Controller-->
         <scene sceneID="bW2-ru-Tfb">
             <objects>
-                <viewController id="9pw-pH-6Cb" customClass="PlayerViewController" customModule="Debugger" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="PlayerViewController" id="9pw-pH-6Cb" customClass="PlayerViewController" customModule="Debugger" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="MMn-Q3-ToO">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -771,7 +768,7 @@
                                 <edgeInsets key="layoutMargins" top="16" left="16" bottom="16" right="16"/>
                             </stackView>
                             <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="YgT-48-71h" userLabel="Top Button View">
-                                <rect key="frame" x="314" y="108" width="80" height="42"/>
+                                <rect key="frame" x="314" y="64" width="80" height="42"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="AEm-Xp-4Pv">
                                         <rect key="frame" x="0.0" y="0.0" width="80" height="42"/>
